# orm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: black_linting.yml
orm/: QueryBuilder.py  Table.py
tests/: data.json  test_QueryBuilder.py
